--- a/templates/index.html
+++ b/templates/index.html
@@ -345,7 +345,7 @@
 
     <nav class="navbar">
         <div class="logo">
-            <img src="{% static 'admin\img\ggggg-removebg-preview.png' %}" alt="FoodCourt Logo" />
+            <img src="{% static '.\admin\img\ggggg-removebg-preview.png' %}" alt="FoodCourt Logo" />
     </div>
         </div>
         <ul class="nav-links">
